@@ -30,6 +30,7 @@ Tasks:
 - #1177 Split CMake presets into debug and release
 - #7331 Script to install deps (Windows only for now)
 - #7332 Static link OpenSSL libs in CMake preset for Windows
+- #7333 Update VS Code config for Windows daemon debugging
 
 # 1.14.6
 
